force-app/main/default/objects/Enrollment_Component_Relationship__c/fields/Old_Child_Enrollment_Component__c.field-meta.xml
<CustomField>
    <fullName>Old_Child_Enrollment_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Child Enrollment Component</label>
    <referenceTo>Enrollment_Component__c</referenceTo>
    <relationshipLabel>Enrollment Component Relationships (Old Child Enrollment Component)</relationshipLabel>
    <relationshipName>Enrollment_Component_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>