force-app/main/default/objects/Enrollment_Component_Relationship__c/validationRules/ECR_Child_Cannot_Be_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>ECR_Child_Cannot_Be_Parent</fullName>
    <active>true</active>
    <description>Validation rule ensuring the child component is not also the parent.</description>
    <errorConditionFormula>AND(Child_Enrollment_Component__r.Id = Parent_Enrollment_Component__r.Id )</errorConditionFormula>
    <errorMessage>The Child Enrollment Component cannot also be the Parent Enrollment Component.</errorMessage>
</ValidationRule>