force-app/main/default/objects/Enrollment_Component_Relationship__c/validationRules/ECR_Document_Has_Correct_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>ECR_Document_Has_Correct_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT( Parent_Enrollment_Component__r.RecordType.DeveloperName  = &quot;Form&quot; ) ,  Child_Enrollment_Component__r.RecordType.DeveloperName   =&quot;Document&quot; )</errorConditionFormula>
    <errorMessage>A component of record type &quot;Document&quot; must have a parent of record type &quot;Form&quot;</errorMessage>
</ValidationRule>