force-app/main/default/objects/Enrollment_Component_Relationship__c/validationRules/ECR_Form_Has_Parent_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>ECR_Form_Has_Parent_Stage</fullName>
    <active>true</active>
    <description>To ensure that proper structure is present</description>
    <errorConditionFormula>AND(  NOT( Parent_Enrollment_Component__r.RecordType.DeveloperName = &quot;Stage&quot;),   Child_Enrollment_Component__r.RecordType.DeveloperName  = &quot;Form&quot; )</errorConditionFormula>
    <errorMessage>A component of type &quot;Form&quot; must have a parent of type &quot;Stage&quot;</errorMessage>
</ValidationRule>