force-app/main/default/objects/Enrollment_Component_Relationship__c/validationRules/ECR_Stage_Has_Parent_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>ECR_Stage_Has_Parent_Process</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT(  Parent_Enrollment_Component__r.RecordType.DeveloperName =&quot;Process&quot;),   Child_Enrollment_Component__r.RecordType.DeveloperName  = &quot;Stage&quot; )</errorConditionFormula>
    <errorMessage>A component of type &quot;Stage&quot; must have a parent of type  &quot;Process&quot;</errorMessage>
</ValidationRule>