force-app/main/default/objects/Enrollment_Component_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Enrollment_Component__c</columns>
    <columns>Child_Enrollment_Component__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>